--- a/home.html
+++ b/home.html
@@ -34,21 +34,21 @@
       <div class="lines">
         <div class="line"></div>
 
-        <a href="login.ejs"
+        <a href="login.html"
           ><button class="LogReg" id="loginbtn">LogIn</button></a
         >
-        <a href="reg.ejs"><button class="LogReg">SignUp</button></a>
+        <a href="reg.html"><button class="LogReg">SignUp</button></a>
 
         <div class="line"></div>
       </div>
     </main>
     <footer>
       <div class="nav">
-        <p><a href="index.ejs">Store</a></p>
-        <p><a href="contact.ejs">Contact Us</a></p>
+        <p><a href="index.html">Store</a></p>
+        <p><a href="contact.html">Contact Us</a></p>
         <p><a href="team.html">Team</a></p>
-        <p><a href="News.ejs">Agri News</a></p>
-        <p><a href="weather.ejs">Weather</a></p>
+        <p><a href="News.html">Agri News</a></p>
+        <p><a href="weather.html">Weather</a></p>
       </div>
     </footer>
   </body>
