--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>family
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -27,16 +27,16 @@
       <nav id="MenuItems" state="off">
       <!-- <nav id="MenuItems"> -->
         <ul id="ul">
-          <li class = hover-3><a href="home.ejs">Sell</a></li>
+          <li class = hover-3><a href="home.html">Sell</a></li>
           <li class = hover-3><a href="#scroll">Products</a></li>
           <!-- <li class = hover-3><a href="/team">About</a></li> -->
-          <!-- Above line is present in home.ejs so no need here -->
-          <li class = hover-3><a href="contact.ejs">Contact</a></li>
-          <li class = hover-3><a href="weather.ejs">Weather Guide</a></li>
+          <!-- Above line is present in home.html so no need here -->
+          <li class = hover-3><a href="contact.html">Contact</a></li>
+          <li class = hover-3><a href="weather.html">Weather Guide</a></li>
           <li class = hover-3><a href="pro.html">GetPro</a></li>
-          <li class = hover-3><a href="News.ejs">Farm News</a></li>
+          <li class = hover-3><a href="News.html">Farm News</a></li>
           <li class = hover-3><a href="comingSonn.html">Demand Analysis</a></li>
-          <li class = hover-3><a href="login.ejs"><%= accountName %></a></li>
+          <li class = hover-3><a href="login.html"><%= accountName %></a></li>
         </ul>
        
       </nav>
