--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         <div class="line"></div>
       </div>
       <div class="form">
-        <form action="login.ejs" method="post">
+        <form action="login.html" method="post">
           <h2 id="orange">LogIn</h2>
           <div class="fields">
             <input
@@ -61,11 +61,11 @@
     </main>
     <footer>
       <div class="nav">
-        <p><a href="index.ejs">Store</a></p>
-        <p><a href="contact.ejs">Contact Us</a></p>
+        <p><a href="index.html">Store</a></p>
+        <p><a href="contact.html">Contact Us</a></p>
         <p><a href="team.html">Team</a></p>
-        <p><a href="News.ejs">Agri News</a></p>
-        <p><a href="weather.ejs">Weather</a></p>
+        <p><a href="News.html">Agri News</a></p>
+        <p><a href="weather.html">Weather</a></p>
       </div>
     </footer>
   </body>
