--- a/pnf404.html
+++ b/pnf404.html
@@ -28,7 +28,7 @@
       <div class="lines">
         <div class="line"></div>
         <h2 id="WelcomeLine">
-          <span id="blue">!!Page not Found!!</span
+          Store <span id="blue">!!Page not Found!!</span
           ><span id="orange">404 Error</span>
         </h2>
         <div class="line"></div>
@@ -36,11 +36,11 @@
     </main>
     <footer>
       <div class="nav">
-        <p><a href="index.ejs">Store</a></p>
-        <p><a href="contact.ejs">Contact Us</a></p>
+        <p><a href="index.html">Store</a></p>
+        <p><a href="contact.html">Contact Us</a></p>
         <p><a href="team.html">Team</a></p>
-        <p><a href="News.ejs">Agri News</a></p>
-        <p><a href="weather.ejs">Weather</a></p>
+        <p><a href="News.html">Agri News</a></p>
+        <p><a href="weather.html">Weather</a></p>
       </div>
     </footer>
   </body>
