Img issues fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="navbar">
       <div class="logo" style="width: 25%;height: 50px;">
-        <img class src="/Img/output-onlinepngtools2.png" width="50%" >
+        <img class src="Img/output-onlinepngtools2.png" width="50%" >
       </div>
       <nav id="MenuItems" state="off">
       <!-- <nav id="MenuItems"> -->
@@ -279,12 +279,12 @@
         <h3>Download our app</h3>
         <p>Download app for android and ios mobile</p>
         <div class="app-logo">
-          <img src="/Img/play-store.png" alt="">
-          <img src="/Img/app-store.png" alt="">
+          <img src="Img/play-store.png" alt="">
+          <img src="Img/app-store.png" alt="">
         </div>
       </div>
       <div class="footer-col-2">
-        <img src="/Img/output-onlinepngtools2.png" alt="">
+        <img src="Img/output-onlinepngtools2.png" alt="">
         <p></p>
       </div>
    
