Esj syntax removed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class = hover-3><a href="pro.html">GetPro</a></li>
           <li class = hover-3><a href="News.html">Farm News</a></li>
           <li class = hover-3><a href="comingSonn.html">Demand Analysis</a></li>
-          <li class = hover-3><a href="login.html"><%= accountName %></a></li>
+          <li class = hover-3><a href="login.html">Login</a></li>
         </ul>
        
       </nav>
@@ -45,7 +45,6 @@
     </div> 
     <div class="row">
       <div class="col-2">
-        <h2 id="MSGBOX"><%= Message %></h2>
         <h1>A new way to get<br>Groceries!</h1>
         <p>As fresh as it gets.<br>Fresh groceries right at your doorstep. </p>
       <a href="" class="btn">Shop now &#8594</a>
